# cmake_skeleton

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
apps/: CMakeLists.txt  README.md  app.cpp
cmake/: GenerateVersionHeader.cmake  README.md  utils.cmake
data/: README.md  input.json
docs/: CMakeLists.txt  README.md  mainpage.md
include/: README.md
include/jlfoam/: lib.hpp  version.hpp.in
include/skeleton/: lib.hpp  skeleton.hpp  version.hpp  version.hpp.in
installed/lib/: libskeleton.so.0  libskeleton.so.0.0.0.0  libspdlog.so.1.15.3
installed/lib/cmake/skeleton/: skeletonConfig.cmake  skeletonConfigVersion.cmake  skeletonTargets-release.cmake  skeletonTargets.cmake
installed/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake
installed/lib/pkgconfig/: spdlog.pc
installed/share/doc/skeleton/docs/: CTestTestfile.cmake  Doxyfile.skeleton-docs  Makefile  cmake_install.cmake
installed/share/doc/skeleton/docs/html/: README_8md.html  TODO_8md.html  add_8cpp.html  add_8cpp__incl.map  add_8cpp__incl.md5  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b5c17a06dc7a277150082c8b405d902b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  include_2README_8md.html  index.html  md__home_jlankine_Code_cmake_skeleton_TODO.html  md__home_jlankine_Code_cmake_skeleton_include_README.html  md__home_jlankine_Code_cmake_skeleton_src_README.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaceskeleton.html  pages.html  skeleton_8hpp.html  skeleton_8hpp__dep__incl.map  skeleton_8hpp__dep__incl.md5  skeleton_8hpp__incl.map  skeleton_8hpp__incl.md5  skeleton_8hpp_source.html  src_2README_8md.html
installed/share/doc/skeleton/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
scripts/: setup_new_project.sh  update_cmake_minimum_required.sh  version.sh
src/: CMakeLists.txt  Config.cmake.in  README.md  add.cpp  lib.cpp  version.cpp.in
tests/: CMakeLists.txt  README.md  add_tests.cpp  lib.cpp
