# ------------------------------------------------------------------------------
# Variables
# ------------------------------------------------------------------------------
set(binname ${PROJECT_NAME}-cli)

# ------------------------------------------------------------------------------
# Targets
# ------------------------------------------------------------------------------
add_executable(${binname} app.cpp)

# ------------------------------------------------------------------------------
# Compilation
# ------------------------------------------------------------------------------
target_compile_features(${binname} PRIVATE cxx_std_20)

# ------------------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------------------
target_link_libraries(${binname} PRIVATE ${PROJECT_NAME})

# ------------------------------------------------------------------------------
# Properties
# ------------------------------------------------------------------------------
set_target_properties(${binname}
    PROPERTIES
    OUTPUT_NAME ${PROJECT_NAME}
    )

# ------------------------------------------------------------------------------
# Installation
# ------------------------------------------------------------------------------
install(TARGETS ${binname}
    CONFIGURATIONS Release
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    )
