# ------------------------------------------------------------------------------
# Includes
# ------------------------------------------------------------------------------
# Gives us access to e.g. catch_discover_tests
include(Catch)

# ------------------------------------------------------------------------------
# Variables
# ------------------------------------------------------------------------------
set(testbin ${PROJECT_NAME}-tests)

# ------------------------------------------------------------------------------
# Targets
# ------------------------------------------------------------------------------
# Tests need to be added as executables first
add_executable(${testbin} add_tests.cpp)

# ------------------------------------------------------------------------------
# Compile features
# ------------------------------------------------------------------------------
target_compile_features(${testbin} PRIVATE cxx_std_20)

# ------------------------------------------------------------------------------
# Dependencies
# ------------------------------------------------------------------------------
target_link_libraries(${testbin}
    PRIVATE
    ${PROJECT_NAME}
    Catch2::Catch2WithMain
    )

# ------------------------------------------------------------------------------
# Properties
# ------------------------------------------------------------------------------
set_target_properties(${testbin}
    PROPERTIES
    OUTPUT_NAME tests
    )

# ------------------------------------------------------------------------------
# Test discovery
# ------------------------------------------------------------------------------
# Should be done last
catch_discover_tests(${testbin})
